[package]
name = "ebuka_todo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
dialoguer = "0.11.0"
uuid = { version = "1", features = ["serde", "v4"] }
csv = "1.1"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
